# tele-store

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic_migrations/: env.py  script.py.mako
alembic_migrations/versions/: 202501070001_create_initial_schema.py  __init__.py
tele_store/: __main__.py
tele_store/config/: config_reader.py
tele_store/crud/: __init__.py  cart.py  category.py  order.py  product.py  user.py
tele_store/db/: db.py  enums.py
tele_store/db/migrations/: 0001_init.sql
tele_store/filters/: __init__.py  admin_filter.py
tele_store/handlers/: __init__.py
tele_store/handlers/callback/: admin_callbacks.py  callbacks.py  user_callbacks.py
tele_store/handlers/callback/user/: __init__.py  cart.py  catalog.py  checkout.py  shared.py
tele_store/handlers/command/: admin_command_router.py  start_command_router.py
tele_store/handlers/message/: admin_message.py  user_message.py
tele_store/keyboards/inline/: add_category_confirm_menu.py  add_item_confirm_menu.py  admin_menu.py  cancel_button.py  cart_menu.py  catalog_list_menu.py  categories_list_menu.py  category_preview_menu.py  item_list_menu.py  item_preview_menu.py  order_confirm_menu.py  order_list_menu.py  order_status_menu.py  product_order_menu.py  select_delivery_method.py  user_category_menu.py  user_menu.py  user_product_menu.py
tele_store/middlewares/: db.py
tele_store/models/: __init__.py  models.py
tele_store/schemas/: cart.py  order.py  product.py  user.py
tele_store/states/: __init__.py  states.py
tests/: conftest.py  test_cart_manager.py  test_crud.py  test_crud_entities.py
